--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button {
+    @apply bg-violet-500 
+             p-2 h-10 rounded 
+           hover:bg-violet-700 
+             transition-colors
+             text-[#fff];
+}
