create widgetForm, loading and separate steps components

--- a/src/global.css
+++ b/src/global.css
@@ -2,10 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.button {
+body {
+    @apply bg-[#09090A] text-zinc-100
+}
+
+/* .button {
     @apply bg-violet-500 
              p-2 h-10 rounded 
            hover:bg-violet-700 
              transition-colors
              text-[#fff];
-}
+} */
